<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddExpenseFragment"
    app:defaultNavHost="true"
    app:navGraph="@navigation/nav_graph">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIconTint="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back_24">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_text"
                style="@style/TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/title_add"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        style="@style/Widget.TextInputLayout.Form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_title"
            style="@style/Widget.TextInputEditText.Form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLength="@integer/title_max_length"
            android:singleLine="true"
            tools:text="Vegetable" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_cat"
        style="@style/Widget.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_title">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/add_cat_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_price"
        style="@style/Widget.TextInputLayout.Form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_cat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_price"
            style="@style/Widget.TextInputEditText.Form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="@integer/price_max_length"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_save_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:text="@string/add_save_close"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@id/til_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_save_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/add_save_more"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_save_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>